Add "kuota tersisa" section

--- a/homepage/static/homepage/css/primaseru.css
+++ b/homepage/static/homepage/css/primaseru.css
@@ -142,6 +142,11 @@ section {
     font-size: 70px;
 }
 
+/* section kelebihan */
+#section-kelebihan {
+    margin-top: 80px;
+}
+
 /* Section 2 */
 .box-jurusan {
     background-color: #FFFFFF;
