--- a/templates/dashboard/major_cap_form.html
+++ b/templates/dashboard/major_cap_form.html
@@ -1,13 +1,16 @@
 {% extends 'dashboard/dashboard_base.html' %}
 {% load crispy_forms_tags %}
 {% load static %}
+
 {% block head %}
     {{ block.super  }}
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 {% endblock head %}
+
 {% block dashtitle %}
-    Tambah Langkah Pendaftaran
+    Kuota Prodi
 {% endblock dashtitle %}
+
 {% block maindash %}
     <div class="row px-3">
         <div class="col-12 bg-white rounded p-3 mt-4 shadow">
@@ -18,7 +21,6 @@
             </form>
         </div>
     </div>
-
 {% endblock maindash %}
 
 {% block js %}
