--- a/templates/dashboard/primaserucontacts_list.html
+++ b/templates/dashboard/primaserucontacts_list.html
@@ -1,45 +1,37 @@
-{% extends 'dashboard/dashboard_base.html' %}
-{% load static %}
-{% block head %}
-    {{ block.super  }}
-{% endblock head %}
+{% extends 'dashboard/list_base.html' %}
+
 {% block dashtitle %}
     Daftar Kontak Primaseru <br />
     <a class="btn btn-light" href="{% url 'primaseru-contacts-create' %}">Tambah Kontak Primaseru</a>
 {% endblock dashtitle %}
-{% block maindash %}
-    <div class="row">
-        <div class="col-12">
-            <div class="table-responsive bg-white rounded p-3 mt-4 shadow">
-                <table class="table table-hover table-sm">
-                    <thead class="thead-light">
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Nama Kontak</th>
-                            <th scope="col">Nomor Whatsapp</th>
-                            <th scope="col">Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for s in object_list %}
-                            <tr>
-                                <th scope="row">{{ forloop.counter  }}</th>
-                                <td>{{ s.name  }}</td>
-                                <td>{{ s.wa_number  }}</td>
-                                <td>
-                                    <form method="POST" class="" action="{% url 'primaseru-contacts-delete' s.pk %}">
-                                        {% csrf_token %}
-                                        <input type="submit" value="Delete" class="btn btn-outline-secondary btn-sm">
-                                        <a class="btn btn-outline-primary btn-sm" href="{% url 'primaseru-contacts-update' s.pk %}">Edit</a>
-                                        <a class="btn btn-primary btn-sm" href="{{ s.link_wa }}">Buka Link</a>
-                                    </form>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
 
-{% endblock maindash %}
+{% block table %}
+<table class="table table-hover table-sm m-0">
+    <thead class="thead-light">
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Nama Kontak</th>
+            <th scope="col">Nomor Whatsapp</th>
+            <th scope="col">Action</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for s in object_list %}
+            <tr>
+                <th scope="row">{{ forloop.counter  }}</th>
+                <td>{{ s.name  }}</td>
+                <td>{{ s.wa_number  }}</td>
+                <td>
+                    <form method="POST" class="" action="{% url 'primaseru-contacts-delete' s.pk %}">
+                        {% csrf_token %}
+                        <input type="submit" value="Delete" class="btn btn-outline-secondary btn-sm">
+                        <a class="btn btn-outline-primary btn-sm" href="{% url 'primaseru-contacts-update' s.pk %}">Edit</a>
+                        <a class="btn btn-primary btn-sm" href="{{ s.link_wa }}">Buka Link</a>
+                    </form>
+                </td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+{% endblock table %}
