--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -37,49 +37,49 @@
             <div class="row">
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="text-center py-3">
-                        <img src="{% static 'homepage/images/pemenang-award.svg' %}" alt="">
+                        <img src="{% static 'homepage/images/pemenang-award.svg' %}" alt="Award logo">
                         <p class="text-secondary mt-3">Pemenang ACER Smart School Awards</p>
                     </div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="text-center py-3">
-                        <img src="{% static 'homepage/images/terakreditas.svg' %}" alt="">
+                        <img src="{% static 'homepage/images/terakreditas.svg' %}" alt="certifikation logo">
                         <p class="text-secondary mt-3"> Terakreditasi "A" dan mempunyai standart mutu ISO 9001:2018</p>
                     </div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="text-center py-3">
-                        <img src="{% static 'homepage/images/kualifikasi-pengajar.svg' %}" alt="">
+                        <img src="{% static 'homepage/images/kualifikasi-pengajar.svg' %}" alt="certifikation logo">
                         <p class="text-secondary mt-3">Kualifikasi pengajar S1 dan S2 dari lulusan kampus ternama dan memiliki sertifikasi keahlian</p>
                     </div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="text-center py-3">
-                        <img src="{% static 'homepage/images/fasilitas-lengkap.svg' %}" alt="">
+                        <img src="{% static 'homepage/images/fasilitas-lengkap.svg' %}" alt="facility logo">
                         <p class="text-secondary mt-3">Memiliki Fasilitas yg lengkap</p>
                     </div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="text-center py-3">
-                        <img src="{% static 'homepage/images/beasiswa.svg' %}" alt="">
+                        <img src="{% static 'homepage/images/beasiswa.svg' %}" alt="scholarship logo">
                         <p class="text-secondary mt-3">Beasiswa 100% ke telkom university untuk 10 lulusan terbaik</p>
                     </div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="text-center py-3">
-                        <img src="{% static 'homepage/images/alumni-sukses.svg' %}" alt="">
+                        <img src="{% static 'homepage/images/alumni-sukses.svg' %}" alt="alumni logo">
                         <p class="text-secondary mt-3">Alumni siap kerja, siap kuliah dan siap berwirausaha</p>
                     </div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="text-center py-3">
-                        <img src="{% static 'homepage/images/segudang-prestasi.svg' %}" alt="">
+                        <img src="{% static 'homepage/images/segudang-prestasi.svg' %}" alt="achievement logo">
                         <p class="text-secondary mt-3">Memiliki segudang prestasi</p>
                     </div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="text-center py-3">
-                        <img src="{% static 'homepage/images/alumni-tersebar.svg' %}" alt="">
+                        <img src="{% static 'homepage/images/alumni-tersebar.svg' %}" alt="alumni logo">
                         <p class="text-secondary mt-3">Alumni tersebar di berbagai negara Jepang, Turqi, Paris, Jerman dll</p>
                     </div>
                 </div>
