--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -505,5 +505,8 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0/dist/chartjs-plugin-datalabels.min.js"></script>
+    <script type="text/javascript">
+        const URL = "{% url 'school-cap-chart' %}"
+    </script>
     <script type="text/javascript" src="{% static 'homepage/js/home.js' %}"></script>
 {% endblock js %}
