--- a/templates/dashboard/school_cap.html
+++ b/templates/dashboard/school_cap.html
@@ -5,7 +5,7 @@
     <thead class="thead-light">
         <tr>
             <th scope="col">#</th>
-            <th scope="col">Sumber Informasi</th>
+            <th scope="col">Label Kuota</th>
             <th scope="col">Kuota</th>
             <th scope="col">Action</th>
         </tr>
