change slogan, and some text

--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -16,10 +16,10 @@
         <div class="container">
             <div class="row justify-content-center align-items-center text-center text-lg-left">
                 <div class="col-lg-6 col-md-10">
-                    <span class="d-block" data-aos="fade-down">Penerimaan Peserta Didik Baru (PRIMASERU)</span>
-                    <h1 class="font-weight-bold" data-aos="fade-right" data-aos-delay="200">Achieve Your Dream <span class="red-text">With Us</span></h1>
+                    <span class="ml-2 d-block" data-aos="fade-down">Penerimaan Peserta Didik Baru (PRIMASERU)</span>
+                    <h1 class="my-4 font-weight-bold" data-aos="fade-right" data-aos-delay="200">Achieve Your Dream <span class="red-text">With Us</span></h1>
                     <div data-aos="fade-up" data-aos-delay="400">
-                        <p class="mb-5 mt-3">Sekolah Berbasis Teknologi Informasi dan Komunikasi Terbaik 3 di Jawa Barat Tahun 2019, UNBK Terbaik di Kabupaten Bandung Tahun 2016 dan 2019. Program Asrama, Patriot dan Tahfizh.</p>
+                        <p class="mb-5 h5">Kini Mendaftar ke SMK Telkom Bandung lebih Mudah Daftar dari rumah dan tes dari rumah.</p>
                         <a href="{% url 'register' %}" class="my-btn-primary">Daftar Sekarang</a>
                     </div>
                 </div>
@@ -54,10 +54,11 @@
     <!-- SECTION 2 -->
     <section id="section-2">
         <div class="container">
-            <div class="row justify-content-center align-items-end">
+            <div class="row justify-content-center align-items-center">
+
                 <div class="col-lg-6 col-md-10">
                     <h1 class="heading-section mb-3">Program Studi di SMK Telkom Bandung <span class="red-text">Pilih Passion Kamu!</span></h1>
-                    <p  class="mb-5 mb-lg-0">Sekolah Berbasis Teknologi Informasi dan Komunikasi Terbaik 3 di Jawa Barat Tahun 2019, UNBK Terbaik di Kabupaten Bandung Tahun 2016 dan 2019. Program Asrama, Patriot dan Tahfizh.</p>
+                    <!-- <p  class="mb-5 mb-lg-0">Sekolah Berbasis Teknologi Informasi dan Komunikasi Terbaik 3 di Jawa Barat Tahun 2019, UNBK Terbaik di Kabupaten Bandung Tahun 2016 dan 2019. Program Asrama, Patriot dan Tahfizh.</p> -->
                 </div>
 
                 <div class="col-lg-6 col-md-10">
