add img-fluid class (for responsive image) in 'testimoni' section

--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -426,7 +426,7 @@
                             <div class="carousel-content mt-3 mt-lg-0 col-12 col-lg-5">
                                 <p class="desc">{{ tes.testimonial }}</p>
                                 <div class="profil-alumni">
-                                    <img src="{{ tes.photo.url }}" alt="Foto Alumni">
+                                    <img class="img-fluid" src="{{ tes.photo.url }}" alt="Foto Alumni">
                                     <div class="ml-2 mt-3">
                                         <p class="font-weight-bold mb-0">{{ tes.full_name }}</p>
                                         <small class="text-secondary">{{ tes.title }}</small>
