disable autoplay carousel testimoni

--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -412,7 +412,7 @@
     <section id="section-testimonials">
         <div class="container">
             <h1 class="heading-section mb-5">Apa Kata Mereka Tentang <br> <span class="red-text">SMK Telkom Bandung?</span></h1>
-            <div id="testimonial-carousel" class="carousel slide my-4" data-ride="carousel">
+            <div id="testimonial-carousel" class="carousel slide my-4" data-ride="carousel" data-interval="false">
                 <div class="carousel-inner">
 
                     {% for tes in testimoni %}
