add google analytics

--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -17,6 +17,16 @@
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'users/css/index.css' %}" type="text/css" media="screen" />
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-YLFMRFGG85"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-YLFMRFGG85');
+        </script>
+
         {% block head %}
         {% endblock head %}
     </head>
