add registration path to the menu, and rename some title

--- a/templates/dashboard/registrationpath_list.html
+++ b/templates/dashboard/registrationpath_list.html
@@ -2,7 +2,7 @@
 
 {% block dashtitle %}
     Status Jurusan (Prodi) Pendaftar<br />
-    <a class="btn btn-light" href="{% url 'registration-path-create' %}">Tambah Jurusan</a>
+    <a class="btn btn-light" href="{% url 'registration-path-create' %}">Tambah Jalur Pendaftar</a>
 {% endblock dashtitle %}
 
 {% block table %}
