--- a/templates/dashboard/registrationpath_form.html
+++ b/templates/dashboard/registrationpath_form.html
@@ -8,7 +8,7 @@
 {% endblock head %}
 
 {% block dashtitle %}
-    Form Status Jurusan
+    Form Status Jalur Pendaftaran
 {% endblock dashtitle %}
 
 {% block maindash %}
