--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -200,17 +200,17 @@
                     <div class="number-container">
                         <div class="number-item">
                             <img src="{% static 'homepage/images/pendaftar.svg' %}" alt="">
-                            <h1 class="red-text font-weight-bold mb-0 mt-2">150</h1>
+                            <h1 class="red-text font-weight-bold mb-0 mt-2">{{ participant_counter }}</h1>
                             <span class="text-secondary">Pendaftar</span>
                         </div>
                         <div class="number-item">
                             <img src="{% static 'homepage/images/diterima.svg' %}" alt="">
-                            <h1 class="red-text font-weight-bold mb-0 mt-2">124</h1>
+                            <h1 class="red-text font-weight-bold mb-0 mt-2">{{ accepted_part }}</h1>
                             <span class="text-secondary">Diterima</span>
                         </div>
                         <div class="number-item">
                             <img src="{% static 'homepage/images/daftar-ulang.svg' %}" alt="">
-                            <h1 class="red-text font-weight-bold mb-0 mt-2">94</h1>
+                            <h1 class="red-text font-weight-bold mb-0 mt-2">{{ re_reg_part }}</h1>
                             <span class="text-secondary">Pendaftar Ulang</span>
                         </div>
                     </div>
