--- a/homepage/static/homepage/css/primaseru.css
+++ b/homepage/static/homepage/css/primaseru.css
@@ -1,4 +1,4 @@
- html {
+html {
     scroll-behavior: smooth;
 }
 * {
@@ -11,6 +11,7 @@ body {
 #app {
     overflow-x: hidden;
 }
+
 /* utilities */
 h1, h2, h3, h1 span, h2 span {
     font-family: 'Poppins', sans-serif;
@@ -21,6 +22,7 @@ p, span, a {
 .red-text {
     color: #FF3131;
 }
+
 /* components */
 .my-btn-primary {
     background: linear-gradient( #FFADAD 10%, #FF0000 );
@@ -50,6 +52,7 @@ p, span, a {
     font-weight: 700;
     font-size: 48px;
 }
+
 /* navbar */
 nav .container {
     padding: 0 15px !important;
@@ -133,7 +136,7 @@ section {
     font-size: 70px;
 }
 
-/* section kelebihan */
+/* section "kelebihan" */
 #section-kelebihan {
     margin-top: 80px;
 }
@@ -161,7 +164,7 @@ section#section-3 ul{
     padding: 1rem;
 }
 
-/* section kuota tersisa*/
+/* section "kuota tersisa" */
 .section-kuota-tersisa {
     padding: 0;
 }
