add new permission and add filter to the dashboard

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -133,53 +133,53 @@
                 </div>
                 <div class="col-md m-2 p-3 bg-white rounded border border-danger">
                     <h3 class="mb-0 mt-1">{{ total_participant_pay }} <small class="text-muted h6 judul">siswa</small></h3>
-                    <h4 class="mb-1 judul"><span class="badge badge-danger">INPUT TAGIHAN DAFTAR ULANG</span></h4>
+                    <h4 class="mb-1 judul"><a href="?tag_daftar_ulg"><span class="badge badge-danger">INPUT TAGIHAN DAFTAR ULANG</span></a></h4>
                 </div>
                 <div class="col-md m-2  p-3 bg-white rounded border border-primary">
                     <h3 class="mb-0 mt-1">{{ total_participant_paid_off }} <small class="text-muted h6 judul">siswa</small></h3>
-                    <h4 class="mb-1 judul"><span class="badge badge-primary">LUNAS BAYAR DAFTAR ULANG</span></h4>
+                    <h4 class="mb-1 judul"><a href="?lunas_bayar_daftar_ulg"><span class="badge badge-primary">LUNAS BAYAR DAFTAR ULANG</span></a></h4>
                 </div>
                 <div class="col-md m-2  p-3 rounded border border-warning">
                     <h3 class="mb-0 mt-1">{{ total_participant_profile }} <small class="text-muted h6 judul">siswa</small></h3>
-                    <h4 class="mb-1 judul"><span class="badge badge-warning">MENGISI IDENTITAS</span></h4>
+                    <h4 class="mb-1 judul"><a href="?mengisi_identitas"><span class="badge badge-warning">MENGISI IDENTITAS</span></a></h4>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-md m-2  p-3 bg-white rounded border border-purple">
                     <h3 class="mb-0 mt-1">{{ total_participant_pay_1 }} <small class="text-muted h6 judul">siswa</small></h3>
-                    <h4 class="mb-1 judul"><span class="badge badge-purple">LUNAS PEMBAYARAN PERTAMA</span></h4>
+                    <h4 class="mb-1 judul"><a href="?lunas_pembayaran_1"><span class="badge badge-purple">LUNAS PEMBAYARAN PERTAMA</span></a></h4>
                 </div>
                 <div class="col-md m-2 p-3 bg-white rounded border border-orange">
                     <h3 class="mb-0 mt-1">{{ total_participant_pay_2 }} <small class="text-muted h6 judul">siswa</small></h3>
-                    <h4 class="mb-1 judul"><span class="badge badge-orange">LUNAS PEMBAYARAN KEDUA</span></h4>
+                    <h4 class="mb-1 judul"><a href="?lunas_pembayaran_2"><span class="badge badge-orange">LUNAS PEMBAYARAN KEDUA</span></a></h4>
                 </div>
                 <div class="col-md m-2  p-3 bg-white rounded border border-abu">
                     <h3 class="mb-0 mt-1">{{ total_participant_pay_3 }} <small class="text-muted h6 judul">siswa</small></h3>
-                    <h4 class="mb-1 judul"><span class="badge badge-abu">LUNAS PEMBAYARAN KETIGA</span></h4>
+                    <h4 class="mb-1 judul"><a href="?lunas_pembayaran_3"><span class="badge badge-abu">LUNAS PEMBAYARAN KETIGA</span></a></h4>
                 </div>
                 <div class="col-md m-2  p-3 rounded border border-cyan">
                     <h3 class="mb-0 mt-1">{{ total_re_register_files }} <small class="text-muted h6 judul">siswa</small></h3>
-                    <h4 class="mb-1 judul"><span class="badge badge-cyan">UPLOAD BERKAS DAFTAR ULANG</span></h4>
+                    <h4 class="mb-1 judul"><a href="?up_berkas_dftr_ulang"><span class="badge badge-cyan">UPLOAD BERKAS DAFTAR ULANG</span></a></h4>
                 </div>
             </div>
 
 			<div class="row">
 				<div class="col-md m-2  p-3 bg-white rounded border border-peach">
 					<h3 class="mb-0 mt-1">{{ total_family_cert }} <small class="text-muted h6 judul">siswa</small></h3>
-                    <h4 class="mb-1 judul"><span class="badge badge-peach">UPLOAD BERKAS PENDAFTARAN</span></h4>
+                    <h4 class="mb-1 judul"><a href="?up_berkas_pendaftaran"><span class="badge badge-peach">UPLOAD BERKAS PENDAFTARAN</span></a></h4>
                 </div>
 				<div class="col-md m-2  p-3 bg-white rounded border border-lime">
 					<h3 class="mb-0 mt-1">{{ total_family_cert_verified }} <small class="text-muted h6 judul">siswa</small></h3>
-                    <h4 class="mb-1 judul"><span class="badge badge-lime">BERKAS PENDAFTARAN TERVERFIKASI</span></h4>
+                    <h4 class="mb-1 judul"><a href="?up_berkas_pendaftaran_verified"><span class="badge badge-lime">BERKAS PENDAFTARAN TERVERFIKASI</span></a></h4>
                 </div>
 				<div class="col-md m-2  p-3 bg-white rounded border border-ice">
 					<h3 class="mb-0 mt-1">{{ total_participant_profile_verified }} <small class="text-muted h6 judul">siswa</small></h3>
-                    <h4 class="mb-1 judul"><span class="badge badge-ice">IDENTITAS TERVERFIKASI</span></h4>
+                    <h4 class="mb-1 judul"><a href="?verified_profile"><span class="badge badge-ice">IDENTITAS TERVERFIKASI</span></a></h4>
                 </div>
 				<div class="col-md m-2  p-3 bg-white rounded border border-grape">
 					<h3 class="mb-0 mt-1">{{ total_participant_resign }} <small class="text-muted h6 judul">siswa</small></h3>
-                    <h4 class="mb-1 judul"><span class="badge badge-grape">PESERTA MEMUNDURKAN DIRI</span></h4>
+                    <h4 class="mb-1 judul"><a href="?resign"><span class="badge badge-grape">PESERTA MEMUNDURKAN DIRI</span></a></h4>
                 </div>
 			</div>
 
@@ -207,7 +207,7 @@
                             <th scope="col">Nama Orang Tua</th>
                             <th scope="col">Asal Sekolah</th>
                             <th scope="col" data-toggle="tooltip" data-placement="top" title="Sesuaikan Dengan Warna Statik di Atas.">Status</th>
-                            {% if request.user.is_staff %}
+                            {% if request.user.is_superuser %}
                             <th scope="col" >Action</th>
                             {% endif %}
                         </tr>
@@ -333,7 +333,7 @@
                                         </span>
 									{% endif %}
                                 </td>
-                                {% if request.user.is_staff %}
+                                {% if request.user.is_superuser %}
                                 <td class="text-center">
                                     <form method="POST" class="" action="{% url 'delete-participant' s.account.pk %}">
                                         {% csrf_token %}
